[gd_scene load_steps=14 format=3 uid="uid://cctgoj0y3ty73"]

[ext_resource type="Script" path="res://Scenes/SeperateFuncByYiming/Src/SoundManager.gd" id="1_x2heq"]
[ext_resource type="AudioStream" uid="uid://bojwn1j0hp1mh" path="res://Scenes/SeperateFuncByYiming/SampleFile/SampleBgm.mp3" id="2_s12qr"]
[ext_resource type="Script" path="res://Scenes/SeperateFuncByYiming/Src/CharacterManager.gd" id="3_mlq8l"]
[ext_resource type="Script" path="res://Scenes/SeperateFuncByYiming/Src/CharacterBoth.gd" id="4_tp4gg"]
[ext_resource type="Script" path="res://Scenes/SeperateFuncByYiming/Src/Character1.gd" id="5_pukxa"]
[ext_resource type="Texture2D" uid="uid://kx17d2a8qxgb" path="res://Textures/CatHead.png" id="6_rdk21"]
[ext_resource type="Script" path="res://Scenes/SeperateFuncByYiming/Src/Character2.gd" id="7_u5xfn"]
[ext_resource type="Texture2D" uid="uid://bv5abp4u8vlpo" path="res://Textures/CatBody.png" id="8_ndnw8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0osm2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_rdk21")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bhrbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ndnw8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bor5m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbgvr"]
size = Vector2(0.430855, 1041)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stklk"]
size = Vector2(0.34879, 1045)

[node name="Node2D" type="Node2D"]

[node name="SoundManagerNode2D" type="Node2D" parent="."]
script = ExtResource("1_x2heq")
music = Array[Resource]([ExtResource("2_s12qr")])

[node name="MusicNode2D" type="Node2D" parent="SoundManagerNode2D"]

[node name="MusicPlayer2D" type="AudioStreamPlayer2D" parent="SoundManagerNode2D/MusicNode2D"]

[node name="EffectNode2D" type="Node2D" parent="SoundManagerNode2D"]

[node name="CharacteManager" type="Node2D" parent="." node_paths=PackedStringArray("char1AnimatedSprite", "char1CollisionShape2D", "char2AnimatedSprite", "char2CollisionShape2D", "char1", "char2", "charBoth", "camera")]
script = ExtResource("3_mlq8l")
char1AnimatedSprite = NodePath("CharacterBoth/Character1/Character1AnimatedSprite2D")
char1CollisionShape2D = NodePath("CharacterBoth/Character1/Character1CollisionPolygon2D")
char2AnimatedSprite = NodePath("CharacterBoth/Character2/Character2AnimatedSprite2D")
char2CollisionShape2D = NodePath("CharacterBoth/Character2/Character2CollisionPolygon2D")
char1 = NodePath("CharacterBoth/Character1")
char2 = NodePath("CharacterBoth/Character2")
charBoth = NodePath("CharacterBoth")
camera = NodePath("Camera2D")

[node name="CharacterBoth" type="RigidBody2D" parent="CharacteManager"]
script = ExtResource("4_tp4gg")

[node name="Character1" type="RigidBody2D" parent="CharacteManager/CharacterBoth"]
position = Vector2(2, 3)
script = ExtResource("5_pukxa")

[node name="Character1AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacteManager/CharacterBoth/Character1"]
sprite_frames = SubResource("SpriteFrames_0osm2")

[node name="Character1CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacteManager/CharacterBoth/Character1"]
polygon = PackedVector2Array(-17, -31, -17, -27, -18, -26, -18, -16, -16, -14, -18, -11, -18, -6, -8, 3, 7, 3, 17, -7, 17, -10, 16, -13, 15, -14, 15, -18, 16, -18, 16, -23, 15, -24, 15, -27, 14, -28, 14, -30, 13, -31, 8, -31, -1, -24, -11, -32, -15, -32)

[node name="Character2" type="RigidBody2D" parent="CharacteManager/CharacterBoth"]
script = ExtResource("7_u5xfn")

[node name="Character2AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacteManager/CharacterBoth/Character2"]
sprite_frames = SubResource("SpriteFrames_bhrbh")

[node name="Character2CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacteManager/CharacterBoth/Character2"]
polygon = PackedVector2Array(-10, -1, -10, 1, -15, 10, -15, 21, -9, 26, 7, 26, 14, 22, 14, 10, 9, 0, -5, 0, -5, -1)

[node name="Camera2D" type="Camera2D" parent="CharacteManager"]

[node name="Button" type="Button" parent="."]
offset_left = 391.0
offset_top = -169.0
offset_right = 467.0
offset_bottom = -138.0
text = "separate"

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(4, 530)
scale = Vector2(97.48, 1)

[node name="Sprite2D" type="Sprite2D" parent="Wall"]

[node name="Wall1" type="CollisionShape2D" parent="Wall"]
shape = SubResource("RectangleShape2D_bor5m")

[node name="Wall2" type="CollisionShape2D" parent="Wall"]
position = Vector2(-0.0512934, -1064)
shape = SubResource("RectangleShape2D_bor5m")

[node name="Wall3" type="CollisionShape2D" parent="Wall"]
position = Vector2(-9.82766, -528)
shape = SubResource("RectangleShape2D_xbgvr")

[node name="Wall4" type="CollisionShape2D" parent="Wall"]
position = Vector2(9.68404, -532.5)
shape = SubResource("RectangleShape2D_stklk")

[connection signal="pressed" from="Button" to="CharacteManager" method="on_separate_charactors"]
[connection signal="pressed" from="Button" to="SoundManagerNode2D" method="play_music" binds= ["SampleBgm"]]
